# multy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: filter.rs
filter/: Cargo.toml
filter/benches/: filter.rs
filter/src/: lib.rs  pixel.rs  pixel_ops.rs
filter/src/algo/: adaptive_threshold.rs  blur.rs  compare.rs  dilate.rs  erode.rs  local_contrast.rs  median_blur.rs  min_max.rs  mod.rs
filter/tests/: filter.rs
src/: file.rs  filter.rs  lib.rs  main.rs  utils.rs
static/: index.html
static/style/: show_image.css
templates/: index.html.tera
tests/: filter.rs
www/: Cargo.toml
www/src/: file.rs  main.rs  utils.rs
