[package]
name = "multy"
version = "0.1.0"
authors = ["Jerrain Yohann <kryod@users.noreply.github.com>"]
edition = "2021"

[dependencies]
rocket = "0.5.0-rc"
rocket_contrib = "0.4.10"
rocket-multipart-form-data =  "0.10.0"
rand = "0.8.4"
image = "0.23.14"
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
