[package]
name = "www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rocket = "0.5.0-rc"
rocket_contrib = "0.4.10"
rocket-multipart-form-data =  "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }

filter = { path = "../filter" }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
